tdf#37650: further improvement of svg export

continues work of 0a4e9138281bd0a4be59031357c1bf52134d007a
when opening a <tspan> element check if <text> element has been
opened already; if not open <text> element and close it immediately
after writing the text

Change-Id: I6e4cfdf9ba107ec9e65a99e7866f4a1075737d82